Tue Apr  4 09:15:16 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Documented Frank's formidably fabulous forwarding fix.

Tue Apr  4 08:36:45 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tests/Permanent_Forward/StubTest.cpp:

          Fixed gcc 2.96 warnings.

Tue Apr  4 08:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/NVList.cpp:
        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.cpp:
        * orbsvcs/orbsvcs/Notify/XML_Loader.cpp:
          Fixed unitialized warnings

Mon Apr  3 18:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Document that with waitstrategy RW you can't use BiDIR GIOP

Mon Apr 03 18:03:29 UTC 2006  Trevor Fields  <fields_t@ociweb.com>

        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/interceptors.cpp:

          Change the interceptor to not count any _is_a calls.  The comparison count
          does not include any _is_a calls.  The calls can occur as a full CORBA
          call when the system does not recognize the object is Collocated or
          collocation is turned off.

Sat Apr  1 18:56:25 UTC 2006  Jaiganesh Balasubramanian  <jai.dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LoadBalancing/README:

          Added a README file explaining the features supported by the TAO
          Load Balancing service and the future work that is targeted.

Sat Apr  1 18:43:21 UTC 2006  Jaiganesh Balasubramanian  <jai.dre.vanderbilt.edu>

        * orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/README:
        * orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/README:

          Added README files for the tests checking the application
          controlled and infrastructure controlled group membership
          support of the TAO Load Balancing service.

Sat Apr  1 18:41:04 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * TAO_IDL/be/be_codegen.cpp:
