@@ -59,8 +59,8 @@ Server_Request_Interceptor::forward_references (
   CORBA::String_var str2 = orb->object_to_string (obj2 ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
-  this->obj_[0] = orb->string_to_object (str1 ACE_ENV_ARG_PARAMETER);
-  this->obj_[1] = orb->string_to_object (str2 ACE_ENV_ARG_PARAMETER);
+  this->obj_[0] = orb->string_to_object (str1.in () ACE_ENV_ARG_PARAMETER);
+  this->obj_[1] = orb->string_to_object (str2.in () ACE_ENV_ARG_PARAMETER);
 }
 
 char *
